Switch from Santuario Base64 to java.util.Base64 implementation
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
(cherry picked from commit 855937b5a5b2aa820bb44c92c5a516008208fd59)